# streamer-dvr

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.json.example  ecosystem.config.js  pyproject.toml  requirements.txt  test_teacat_logic.py
.github/workflows/: ci.yml
app/: __init__.py  bootstrap.py  main.py  worker.py
app/api/: models.py  serializers.py  web.py
app/common/: __init__.py  events.py  network.py  paths.py  schedule.py  time.py  ui.py
app/core/: __init__.py  config.py
app/domain/: __init__.py  channel.py  config.py  enums.py  event.py  session.py
app/platform/: __init__.py  base.py  chaturbate.py  chaturbate_cookies.txt  registry.py
app/services/: __init__.py  config_service.py  session_core.py
app/storage/: command_queue.py  event_queries.py  event_repository.py  event_sql.py  event_store.py  file_store.py  json_store.py  session_queries.py  sqlite_schema.py  sqlite_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
notes/: av-sync-handover-2026-04-14.md  av-sync-investigation-2026-04-11.md  av-sync-repair-strategy-2026-04-13.md
scripts/: compare_recording_methods.py  migrate_legacy_channels.py  parallel_recording_experiment.py  pm2-start.sh  replace_test_mp4s_from_ts.py  sync_cookies.py
tests/: test_api_models.py  test_chaturbate_platform.py  test_parallel_recording_experiment.py  test_recorder_probe.py  test_recorder_service.py  test_safe_paths.py  test_scheduler_capture.py  test_scheduler_probe.py  test_scheduler_recovery.py  test_scheduler_service.py  test_session_core.py  test_sqlite_store.py
(+66 files in other folders)
