[project]
name = "streamer-dvr"
version = "0.1.0"
description = "Self-hosted live stream recorder with a web dashboard."
requires-python = ">=3.13"
dependencies = [
  "browser-cookie3>=0.20.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "yt-dlp>=2025.0.0,<2026.0.0",
  "uvicorn>=0.34.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
